--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
-                  alt="paris web design logo agence web meilleure agence"
+                  alt="logo la panthere"
                   height="40"
               /></a>
               <!-- <div class="keywords" style="color: #cccccc; font-size: 1px">
@@ -75,7 +75,7 @@
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">page2 &gt;</a>
+                  <a href="page2.html">Contact &gt;</a>
                 </li>
               </ul>
             </div>
@@ -96,7 +96,7 @@
                 src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
-                alt="Agence La Panthère, agence web paris, création logo paris"
+                alt="image la panthere"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 Agence La Panthère
@@ -119,12 +119,11 @@
       <div class="bloc bgc-white l-bloc" id="bloc-2-services">
         <div class="container bloc-md">
           <div class="row">
-            <div class="col-sm-12 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title.png"
-              />
-            </div>
+            <h2 class="col-sm-12 text-center intro">
+              L'agence La Panthère est une
+              <strong>agence de Web Design</strong> qui aide les entreprises à
+              <strong>devenir attractives et visibles sur internet.</strong>
+            </h2>
           </div>
           <div class="row voffset-lg med-width-whitespace">
             <div class="col-sm-4">
@@ -169,10 +168,16 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/citation.png"
-              />
+              <h3><i>
+                "L'agence La Panthère est un excellente agence web! <br />
+                Les web designers ont réussi à capturer l'essence de notre
+                entreprise <br />et à
+                l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
+                <br />
+                en ligne à Lyon"
+              </h3></i>
+              <br />
+              Maxime Guilbard, PDG de A vos fourchettes
             </div>
           </div>
         </div>
@@ -217,12 +222,10 @@
       >
         <div class="container bloc-lg">
           <div class="row">
-            <div class="col-sm-12 text-center">
-              <img
-                alt="agence web, agence web paris, web design paris, stratégie web"
-                src="img/title2.png"
-              />
-            </div>
+            <h3 class="col-sm-12 text-center">
+              Nous travaillons avec beaucoup de clients,<br>
+			  voici nos réalisations.
+            </h3>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
             <div class="col-sm-6">
@@ -234,7 +237,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.jpg"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
+                  alt="image de refonte site web journal"
                   class="img-responsive portfolio-thumb"
               /></a>
               <h3 class="mg-md text-center">
@@ -255,7 +258,7 @@
                 ><img
                   src="img/2.jpg"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
+                  alt="image Création d'un site web pour photographes"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -270,14 +273,14 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.bmp"
+                data-lightbox="img/3.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.bmp"
+                  src="img/3.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
+                  alt="image Création d'un site web pour voyageur"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -290,14 +293,14 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.bmp"
+                data-lightbox="img/4.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.bmp"
+                  src="img/4.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
+                  alt="image Création d'un site web pour agence de mariage"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
@@ -373,7 +376,7 @@
                     ></a>
                   </div>
                 </div>
-                <div class="keywords" style="color: #f3976c">
+                <!-- <div class="keywords" style="color: #f3976c">
                   Agence web à paris, stratégie web, web design, illustrations,
                   design de site web, site web, web, internet, site internet,
                   site
@@ -428,7 +431,7 @@
                     </li>
                     <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
                   </ul>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
