--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
               <img
-                src="img/logo.png"
+                src="img/logo.webp"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="image la panthere"
@@ -231,12 +231,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/1.jpg"
+                data-lightbox="img/1.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/1.jpg"
+                  src="img/1.webp"
                   alt="image de refonte site web journal"
                   class="img-responsive portfolio-thumb"
               /></a>
@@ -251,12 +251,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/2.jpg"
+                data-lightbox="img/2.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour photographes"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/2.jpg"
+                  src="img/2.webp"
                   class="img-responsive portfolio-thumb"
                   alt="image Création d'un site web pour photographes"
               /></a>
