--- a/index.html
+++ b/index.html
@@ -348,28 +348,28 @@
                   <div class="text-center">
                     <a class="social" href="index.html"
                       ><span class="fa fa-twitter icon-md"></span
-                    ></a>
+                    ><p class="tc-white">Twitter</p></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
                       ><span class="fa fa-facebook icon-md"></span
-                    ></a>
+                    ><p class="tc-white">Facebook</p></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
                       ><span class="fa fa-dribbble icon-md"></span
-                    ></a>
+                    ><p class="tc-white">Dribble</p></a>
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
                       ><span class="fa fa-instagram icon-md"></span
-                    ></a>
+                    ><p class="tc-white">Instagram</p></a>
                   </div>
                 </div>
                 <!-- <div class="keywords" style="color: #f3976c">
