--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
               <img
                 src="img/logo.webp"
                 class="center-block image-resize-mode"
-                width="100"
+                width="100px"
+				height="100px"
                 alt="image la panthere"
               />
               <h1 class="text-center hero-bloc-text tc-white">
