--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
                   alt="logo la panthere"
-                  height="40"
+                  height="40px"
+				  width="217px"
               /></a>
               <!-- <div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations,
@@ -236,6 +237,8 @@
                   src="img/1.webp"
                   alt="image de refonte site web journal"
                   class="img-responsive portfolio-thumb"
+				  width="270px"
+				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Refonte d'un site web pour un journal local
@@ -256,6 +259,8 @@
                   src="img/2.webp"
                   class="img-responsive portfolio-thumb"
                   alt="image Création d'un site web pour photographes"
+				  width="270px"
+				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -278,6 +283,8 @@
                   src="img/3.webp"
                   class="img-responsive portfolio-thumb"
                   alt="image Création d'un site web pour voyageur"
+				  width="270px"
+				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -298,6 +305,8 @@
                   src="img/4.webp"
                   class="img-responsive portfolio-thumb"
                   alt="image Création d'un site web pour agence de mariage"
+				  width="270px"
+				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
