Footer page contact

--- a/page2.html
+++ b/page2.html
@@ -125,7 +125,7 @@
                 <div class="form-group">
                   <label>
                     Brief de votre projet (Ajoutez autant de détails que
-                    nécessaire)<br /> </label
+                    nécessaire) </label
                   ><textarea
                     id="message"
                     class="form-control"
@@ -171,29 +171,33 @@
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-twitter icon-md"></span
-                    ></a>
+                      ><span class="fa fa-twitter icon-md"></span>
+                      <p class="tc-white">Twitter</p></a
+                    >
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-facebook icon-md"></span
-                    ></a>
+                      ><span class="fa fa-facebook icon-md"></span>
+                      <p class="tc-white">Facebook</p></a
+                    >
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-dribbble icon-md"></span
-                    ></a>
+                      ><span class="fa fa-dribbble icon-md"></span>
+                      <p class="tc-white">Dribble</p></a
+                    >
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-instagram icon-md"></span
-                    ></a>
+                      ><span class="fa fa-instagram icon-md"></span>
+                      <p class="tc-white">Instagram</p></a
+                    >
                   </div>
                 </div>
               </div>
