--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
                 </li>
                 <li></li>
                 <li>
-                  <a href="page2.html">Contact &gt;</a>
+                  <a href="page2.html">Contact</a>
                 </li>
               </ul>
             </div>
