--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
                 data-frame="snapshot-lb"
                 ><img
                   src="img/1.webp"
+                  loading="lazy"
                   alt="image de refonte site web journal"
                   class="img-responsive portfolio-thumb"
 				  width="270px"
@@ -258,6 +259,7 @@
                 ><img
                   src="img/2.webp"
                   class="img-responsive portfolio-thumb"
+                  loading="lazy"
                   alt="image Création d'un site web pour photographes"
 				  width="270px"
 				  height="270px"
@@ -282,6 +284,7 @@
                 ><img
                   src="img/3.webp"
                   class="img-responsive portfolio-thumb"
+                  loading="lazy"
                   alt="image Création d'un site web pour voyageur"
 				  width="270px"
 				  height="270px"
@@ -304,6 +307,7 @@
                 ><img
                   src="img/4.webp"
                   class="img-responsive portfolio-thumb"
+                  loading="lazy"
                   alt="image Création d'un site web pour agence de mariage"
 				  width="270px"
 				  height="270px"
