--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
 
-   
-
     <title>La Panthère - Agence de Web Design sur Lyon</title>
 
     <!-- Analytics -->
@@ -46,8 +44,6 @@
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
                   alt="logo la panthere"
-                  height="40px"
-				  width="217px"
               /></a>
               <!-- <div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations,
@@ -92,8 +88,6 @@
               <img
                 src="img/logo.webp"
                 class="center-block image-resize-mode"
-                width="100px"
-				height="100px"
                 alt="image la panthere"
               />
               <h1 class="text-center hero-bloc-text tc-white">
@@ -166,14 +160,16 @@
           </div>
           <div class="row voffset-lg voffset">
             <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-              <h3><i>
-                "L'agence La Panthère est un excellente agence web! <br />
-                Les web designers ont réussi à capturer l'essence de notre
-                entreprise <br />et à
-                l'intégrer à notre site. Cela nous a aidé à doubler nos ventes
-                <br />
-                en ligne à Lyon"
-              </h3></i>
+              <h3>
+                <i>
+                  "L'agence La Panthère est un excellente agence web! <br />
+                  Les web designers ont réussi à capturer l'essence de notre
+                  entreprise <br />et à l'intégrer à notre site. Cela nous a
+                  aidé à doubler nos ventes
+                  <br />
+                  en ligne à Lyon"
+                </i>
+              </h3>
               <br />
               Maxime Guilbard, PDG de A vos fourchettes
             </div>
@@ -221,8 +217,8 @@
         <div class="container bloc-lg">
           <div class="row">
             <h3 class="col-sm-12 text-center">
-              Nous travaillons avec beaucoup de clients,<br>
-			  voici nos réalisations.
+              Nous travaillons avec beaucoup de clients,<br />
+              voici nos réalisations.
             </h3>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -238,8 +234,6 @@
                   loading="lazy"
                   alt="image de refonte site web journal"
                   class="img-responsive portfolio-thumb"
-				  width="270px"
-				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Refonte d'un site web pour un journal local
@@ -261,8 +255,6 @@
                   class="img-responsive portfolio-thumb"
                   loading="lazy"
                   alt="image Création d'un site web pour photographes"
-				  width="270px"
-				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
@@ -286,8 +278,6 @@
                   class="img-responsive portfolio-thumb"
                   loading="lazy"
                   alt="image Création d'un site web pour voyageur"
-				  width="270px"
-				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
@@ -309,8 +299,6 @@
                   class="img-responsive portfolio-thumb"
                   loading="lazy"
                   alt="image Création d'un site web pour agence de mariage"
-				  width="270px"
-				  height="270px"
               /></a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
@@ -361,87 +349,35 @@
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-twitter icon-md"></span
-                    ><p class="tc-white">Twitter</p></a>
+                      ><span class="fa fa-twitter icon-md"></span>
+                      <p class="tc-white">Twitter</p></a
+                    >
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-facebook icon-md"></span
-                    ><p class="tc-white">Facebook</p></a>
+                      ><span class="fa fa-facebook icon-md"></span>
+                      <p class="tc-white">Facebook</p></a
+                    >
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-dribbble icon-md"></span
-                    ><p class="tc-white">Dribble</p></a>
+                      ><span class="fa fa-dribbble icon-md"></span>
+                      <p class="tc-white">Dribble</p></a
+                    >
                   </div>
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
                     <a class="social" href="index.html"
-                      ><span class="fa fa-instagram icon-md"></span
-                    ><p class="tc-white">Instagram</p></a>
+                      ><span class="fa fa-instagram icon-md"></span>
+                      <p class="tc-white">Instagram</p></a
+                    >
                   </div>
                 </div>
-                <!-- <div class="keywords" style="color: #f3976c">
-                  Agence web à paris, stratégie web, web design, illustrations,
-                  design de site web, site web, web, internet, site internet,
-                  site
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-4">
-                  Partenaires
-                  <ul>
-                    <li><a href="voiture.com">voiture.com</a></li>
-                    <li><a href="pizza.com">pizza.com</a></li>
-                    <li><a href="matoiture.com">matoiture.com</a></li>
-                    <li><a href="immobilierseo.com">immobilierseo.com</a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4">
-                  Annuaires liste 1
-                  <ul>
-                    <li><a href="annuaireagence.com">annuaireagence.com</a></li>
-                    <li><a href="annuaireseo.com">annuaireseo.com</a></li>
-                    <li>
-                      <a href="annuairemarketing.com">annuairemarketing.com</a>
-                    </li>
-                    <li><a href="123seoture.com">123seo.com</a></li>
-                    <li><a href="123site.com">123site.com</a></li>
-                    <li>
-                      <a href="annuairewordpress.com">annuairewordpress.com</a>
-                    </li>
-                    <li><a href="listeagence.com">listeagence.com</a></li>
-                    <li>
-                      <a href="meilleuresagencesparis.com"
-                        >meilleuresagencesparis.com</a
-                      >
-                    </li>
-                    <li><a href="listeseo.com">listeseo.com</a></li>
-                  </ul>
-                </div>
-                <div class="col-sm-4">
-                  Annuaires liste 2
-                  <ul>
-                    <li><a href="betterseo.com">betterseo.com</a></li>
-                    <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-                    <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-                    <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-                    <li><a href="liensagogo.com">liensagogo.com</a></li>
-                    <li><a href="backlink.com">backlink.com</a></li>
-                    <li>
-                      <a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a>
-                    </li>
-                    <li>
-                      <a href="remontersurgoogle.com">remontersurgoogle.com</a>
-                    </li>
-                    <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-                  </ul>
-                </div> -->
               </div>
             </div>
           </div>
@@ -450,12 +386,12 @@
       <!-- Footer - bloc-8 END -->
     </div>
     <!-- Principal conteneur END -->
-	<script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/jquery-2.1.0.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
+    <script src="./js/jqBootstrapValidation.js"></script>
     <script src="./js/formHandler.js"></script>
   </body>
 </html>
