--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 src="img/logo.webp"
                 class="center-block image-resize-mode"
                 alt="image la panthere"
+                width="100"
               />
               <h1 class="text-center hero-bloc-text tc-white">
                 Agence La Panthère
