W3c validator css+ html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
                   alt="logo la panthere"
+                  height="42"
               /></a>
               <!-- <div class="keywords" style="color: #cccccc; font-size: 1px">
                 Agence web à paris, stratégie web, web design, illustrations,
