--- a/page2.html
+++ b/page2.html
@@ -174,7 +174,7 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-twitter icon-md"></span>
                       <p class="tc-white">Twitter</p></a
                     >
@@ -182,7 +182,7 @@
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-facebook icon-md"></span>
                       <p class="tc-white">Facebook</p></a
                     >
@@ -190,7 +190,7 @@
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-dribbble icon-md"></span>
                       <p class="tc-white">Dribble</p></a
                     >
@@ -198,7 +198,7 @@
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-instagram icon-md"></span>
                       <p class="tc-white">Instagram</p></a
                     >
