--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
               <div class="row row-no-gutters social">
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-twitter icon-md"></span>
                       <p class="tc-white">Twitter</p></a
                     >
@@ -358,7 +358,7 @@
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-facebook icon-md"></span>
                       <p class="tc-white">Facebook</p></a
                     >
@@ -366,7 +366,7 @@
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-dribbble icon-md"></span>
                       <p class="tc-white">Dribble</p></a
                     >
@@ -374,7 +374,7 @@
                 </div>
                 <div class="col-sm-3">
                   <div class="text-center">
-                    <a class="social" href="index.html"
+                    <a class="social" href="#"
                       ><span class="fa fa-instagram icon-md"></span>
                       <p class="tc-white">Instagram</p></a
                     >
