--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Agence web à paris, stratégie web, web design, illustrations,
                 design de site web, site web, web, internet, site internet, site
               </div> -->
-              <button
+              <!-- <button
                 id="nav-toggle"
                 type="button"
                 class="ui-navbar-toggle navbar-toggle"
@@ -72,7 +72,7 @@
                   <a href="page2.html">Contact</a>
                 </li>
               </ul>
-            </div>
+            </div> -->
           </nav>
         </div>
       </div>
