--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </h1>
               <div class="text-center">
                 <a
-                  href="page2.html"
+                  href="contact.html"
                   class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
                   id="cta-hero"
                   >Contact</a
@@ -171,9 +171,7 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><a class="ltc-white bold-link" href="page2.html"
-                  >Contactez notre équipe</a
-                ><br />
+                <br /><br /><br />
               </p>
             </div>
           </div>
@@ -299,7 +297,7 @@
             </h2>
             <div class="col-sm-12 text-center">
               <a
-                href="page2.html"
+                href="contact.html"
                 class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
                 >Contact</a
               >
