--- a/index.html
+++ b/index.html
@@ -171,7 +171,9 @@
                 votre site, n’hésitez pas à nous contacter. Nous travaillerons
                 ensemble pour créer des sites beau et bien structurés, qui
                 seront facilement trouvable sur les moteurs de recherche.
-                <br /><br /><br />
+                <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                  >Contactez notre équipe</a
+                ><br />
               </p>
             </div>
           </div>
@@ -295,13 +297,7 @@
               Prêt pour redonner vie à votre projet ?<br />Contactez notre
               équipe !
             </h2>
-            <div class="col-sm-12 text-center">
-              <a
-                href="contact.html"
-                class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero"
-                >Contact</a
-              >
-            </div>
+            <div class="col-sm-12 text-center"></div>
           </div>
         </div>
       </div>
